# magnetronic

./: Cargo.toml  LICENSE.md  README.md
core/: Cargo.toml
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: bencode_decode.rs  bencode_encode.rs
core/src/: error.rs  handshake.rs  magnet.rs  main.rs  peers.rs  tests.rs  torrent.rs
core/src/bencode/: mod.rs  tests.rs  value.rs
core/src/peer/: message.rs  mod.rs  piece.rs  tests.rs
src/: bencode.rs  handshake.rs  magnet.rs  main.rs  peer_message.rs  peers.rs  torrent.rs
src/bencode/: mod.rs  value.rs
src/peer/: message.rs  mod.rs  piece.rs
