[package]
name = "magnetronic-core"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
anyhow = "1.0.68"                                                  # error handling
bytes = "1.3.0"                                                    # helps wrap responses from reqwest
clap = { version = "4.0.32", features = ["derive"]}                # creating a cli
data-encoding = "2.9.0"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.27"
percent-encoding = "2.3.1"
regex = "1"                                                        # for regular expressions
reqwest = { version = "0.12.20", features = ["json", "blocking"] } # http requests
serde = { version = "1.0.136", features = ["derive"] }             # for json mangling
serde_bytes = "0.11.12"                                            # for dealing with bytes
serde_json = "1.0.105"                                             # for json mangling
serde_urlencoded = "0.7.1"                                         # for url encoding
sha1 = "0.10.1"                                                    # hashing
tempfile = "3"                                                     # creating temporary directories
thiserror = "2.0.12"                                               # error handling
tokio = { version = "1.23.0", features = ["full"] }                # async http requests
